chores: trying 500 vocab

--- a/bpe.ipynb
+++ b/bpe.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,14 +43,14 @@
     "# mirip dengan `num_of_merges` yang diajarkan di kelas (relasinya kurang lebih \n",
     "# num_of_merges = vocab_size - num_of_alphabet).\n",
     "trainer = BpeTrainer(\n",
-    "    vocab_size=100,  # Perbesar/perkecil dan lihat bedanya pada hasil tokenisasi\n",
+    "    vocab_size=500,  # Perbesar/perkecil dan lihat bedanya pada hasil tokenisasi\n",
     "    special_tokens=[\"[UNK]\", \"[CLS]\", \"[SEP]\", \"[PAD]\", \"[MASK]\"],\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,9 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Per', 'usahaan', 'pert', 'amb', 'angan', 'minyak']\n"
+     ]
+    }
+   ],
    "source": [
     "# Contoh melakukan tokenisasi suatu kalimat\n",
     "print(tokenizer.encode('Perusahaan pertambangan minyak').tokens)"
@@ -114,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4
  },
