--- a/bpe.ipynb
+++ b/bpe.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,14 +43,14 @@
     "# mirip dengan `num_of_merges` yang diajarkan di kelas (relasinya kurang lebih \n",
     "# num_of_merges = vocab_size - num_of_alphabet).\n",
     "trainer = BpeTrainer(\n",
-    "    vocab_size=500,  # Perbesar/perkecil dan lihat bedanya pada hasil tokenisasi\n",
+    "    vocab_size=10000,  # Perbesar/perkecil dan lihat bedanya pada hasil tokenisasi\n",
     "    special_tokens=[\"[UNK]\", \"[CLS]\", \"[SEP]\", \"[PAD]\", \"[MASK]\"],\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,20 +89,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Per', 'usahaan', 'pert', 'amb', 'angan', 'minyak']\n"
+      "['Namun', 'dana', 'tersebut', 'baru', 'terp', 'ak', 'ai', '16', '8', 'juta', 'dolar', 'AS', '.']\n"
      ]
     }
    ],
    "source": [
     "# Contoh melakukan tokenisasi suatu kalimat\n",
-    "print(tokenizer.encode('Perusahaan pertambangan minyak').tokens)"
+    "print(tokenizer.encode('Namun dana tersebut baru terpakai 168 juta dolar AS.').tokens)"
    ]
   }
  ],
@@ -122,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
