refactor: clean akurasi code

--- a/akurasi.ipynb
+++ b/akurasi.ipynb
@@ -32,8 +32,8 @@
    ],
    "source": [
     "# Call function to calculate accuracy of tokenizer result\n",
-    "gold_standard = ['Namun', 'dana', 'tersebut', 'baru', 'terpakai', '168', 'juta', 'dolar', 'AS', '.' ]\n",
-    "tokenizer_result = ['Namun', 'd', '##a', '##n', '##a', 'tersebut', 'baru', 'terpak', '##a', '##i', '16', '##8', 'juta', 'dol', '##a', '##r', 'AS', '.' ]\n",
+    "gold_standard = []\n",
+    "tokenizer_result = []\n",
     "print(\"Accuracy of tokenizer result: \", accuracy(tokenizer_result, gold_standard))"
    ]
   }
